--- a/playbooks/roles/provision/templates/supervisor.conf.j2
+++ b/playbooks/roles/provision/templates/supervisor.conf.j2
@@ -4,7 +4,7 @@ command={{ minecraft_dir }}/start-server
 user={{ minecraft_user }}
 numprocs=1
 autostart=true
-autorestart=unexpected
+autorestart=true
 startsecs=5
 startretries=3
 stopsignal=INT
